--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   shared_preferences: ^2.0.15
   sqflite: ^2.0.2+1
   rxdart: ^0.27.4
+  flutter_polyline_points: ^1.0.0
   http: ^0.13.4
 dev_dependencies:
   flutter_lints: ^1.0.0
